--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=utilitybilltracker
+spring.datasource.url=jdbc:postgresql://localhost:5432/utility-bill-tracker?serverTimezone=UTC
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security=DEBUG
+
+
+springdoc.api-docs.path=/api-docs
